changing portrait size per screen width. changed class name grid-container to container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="container">
         <div class="headspace">
             <h1 class="name"><span class="mark">CONNOR<br /></span><span class="mark">MELLENCAMP</span></h1>
         </div>
