--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="headspace">
             <h1 class="name"><span class="mark">CONNOR<br /></span><span class="mark">MELLENCAMP</span></h1>
         </div>
-        <img class="portrait" src="https://i.ibb.co/tsWNn4s/IMG-1153.jpg" alt="portrait" />
+        <div class="portrait-wrapper">
+            <img class="portrait" src="https://i.ibb.co/tsWNn4s/IMG-1153.jpg" alt="portrait" />
+        </div>
         <div class="section">
             <div class="projects">
                 <h1 class="section-title">projects</h1>
