added links to contact icons

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         </div>
         <div class="footer">
-            <img class="contact-logo" src="./assets/resume-logo.svg" alt="Resume logo" />
-            <img class="contact-logo" src="./assets/linkedin-logo.svg" alt="LinkedIn logo" />
-            <img class="contact-logo" src="./assets/github-logo.svg" alt="GitHub logo" />
+            <a href="https://docs.google.com/document/d/1BY7yQ04W9gVpEk_ZtIWBmaUnJpALmWRODy94ypZgOPM/edit?usp=sharing"><img class="contact-logo" src="./assets/resume-logo.svg" alt="Resume logo" /></a>
+            <a href="https://www.linkedin.com/in/connormellencamp/"><img class="contact-logo" src="./assets/linkedin-logo.svg" alt="LinkedIn logo" /></a>
+            <a href="https://github.com/comellen"><img class="contact-logo" src="./assets/github-logo.svg" alt="GitHub logo" /></a>
         </div>
     </div>
 
