--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <div class="headspace">
-            <h1 class="name"><span class="mark">CONNOR<br /></span><span class="mark">MELLENCAMP</span></h1>
+            <h1 class="name">CONNOR<br />MELLENCAMP</h1>
+            <h1 class="name-overlay">CONNOR<br />MELLENCAMP</h1>
         </div>
         <div class="portrait-wrapper">
             <img class="portrait" src="https://i.ibb.co/tsWNn4s/IMG-1153.jpg" alt="portrait" />
