re-added highlight to name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="headspace">
-            <h1 class="name blueshadow">CONNOR<br />MELLENCAMP</h1>
+            <h1 class="name blueshadow"><span class="mark">CONNOR<br />MELLENCAMP</span></h1>
             <h1 class="name redshadow">CONNOR<br />MELLENCAMP</h1>
         </div>
         <div class="portrait-wrapper">
