--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="section">
             <div class="aboutme">
                 <h1 class="section-title">about me</h1>
-                <!-- <div class="aboutme-text">I'm creative and have a genuine desire of deep understanding and constant improvement. Currently my learning time is devoted to furthering my experience with and understanding of JavaScript and its frameworks. When I'm not behind my computer, you'll find me cooking, reading, listening to podcasts, or at the gym training Brazilian Jiu Jitsu.</div> -->
+                <p class="aboutme-text">I'm creative and have a genuine desire of deep understanding and constant improvement. Currently my learning time is devoted to furthering my experience with and understanding of JavaScript and its frameworks. When I'm not behind my computer, you'll find me cooking, reading, listening to podcasts, or at the gym training Brazilian Jiu Jitsu.</p>
             </div>
         </div>
         <div class="section">
